@@ -408,8 +408,10 @@ typedef struct
 // Structure that points to some of the widgets in a text entry dialog
 typedef struct
 {
+	GtkWidget			*font_bg_colour_button;
+	GtkWidget			*font_face_combo_box;
+	GtkWidget			*font_fg_colour_button;
 	GtkWidget			*font_size_spin_button;
-	GtkWidget			*font_style_combo_box;
 	GtkWidget			*text_view;
 } text_dialog_widgets;
 
